--- a/index.html
+++ b/index.html
@@ -349,12 +349,11 @@
   function beginWithHandle(h){ if (h){ state.handle = h.startsWith('@') ? h : '@'+h; document.getElementById('handle').textContent = state.handle; loadAvatarFor(h); } else { state.handle = '@guest'; document.getElementById('handle').textContent = state.handle; setAvatar(null); } startGame(); resetAndLoadLeaderboard(state.handle.replace('@','')).catch(()=>{}); }
 
   // ============== X AVATAR LOADING (hardened) ==============
-  function candidateAvatarUrls(handle){ const h = String(handle).replace(/^@/,''); return [
-    `https://unavatar.io/x/${encodeURIComponent(h)}`,
-    `https://unavatar.io/twitter/${encodeURIComponent(h)}`,
-    `https://unavatar.io/${encodeURIComponent(h)}`,
-    `https://unavatar.io/https://x.com/${encodeURIComponent(h)}`,
-  ]; }
+  function candidateAvatarUrls(handle){
+  const h = String(handle).replace(/^@/, '');
+  // tek URL: proxy endpoint (same-origin)
+  return [ `/api/avatar?handle=${encodeURIComponent(h)}` ];
+}
 
   function tryLoad(url){ return new Promise((resolve,reject)=>{ const img=new Image(); img.crossOrigin='anonymous'; img.onload=()=>resolve(url); img.onerror=reject; img.src=url; setTimeout(()=>reject(new Error('timeout')), 6000); }); }
 
