--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 
   <!-- Bottom-right social links -->
   <div id="socialTag" aria-label="social handles">
-    discord: <span style="font-weight:700">tablemagicio</span>
+    discord: <span style="font-weight:700">cryptoayax</span>
     <span class="sep">•</span>
-    x: <a href="https://x.com/tablemagicio" target="_blank" rel="noopener noreferrer">tablemagicio</a>
+    x: <a href="https://x.com/cryptoayax" target="_blank" rel="noopener noreferrer">cryptoayax</a>
   </div>
 
   <script>
