--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <!-- Start dialog -->
   <div id="start" class="overlay" role="dialog" aria-modal="true">
     <div class="card grid">
-      <h1 class="title">Sentient Run 🐄</h1>
+      <h1 class="title">Sentient Run</h1>
       <div class="muted">Enter your X (Twitter) handle; we’ll fetch your avatar and start the game.</div>
       <div class="row">
         <input id="inputHandle" type="text" placeholder="e.g., sentient_io" autocomplete="off" />
