--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
     #socialTag a { color: #4da3ff; text-decoration: none; }
     #socialTag a:hover { text-decoration: underline; }
     #socialTag .sep { margin: 0 6px; opacity: .5; }
-
+#btnStart{
+  background: linear-gradient(90deg, #8a2be2, #00d4ff); /* örnek renkler */
+}
+#btnStart:hover{ filter: brightness(1.08); } /* opsiyonel */
   @media (max-width: 860px){
     .layout{ grid-template-columns:1fr; }
     #game{ width:min(94vw, 420px); }
